added toggle image button also below action bar with icons.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World!</string>
     <string name="app_name">MainActivity</string>
+    <string name="test_string">hello world i am a test string , very long one.</string>
 
 </resources>
